resources/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: laurens
  labels:
    name: laurens
