resources/workbench-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workbench-deployment
  namespace: laurens
  labels:
    app: workbench
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workbench
  template:
    metadata:
      labels:
        app: workbench
    spec:
      containers:
      - name: workbench
        image: "jupyter/minimal-notebook"
        ports:
        - containerPort: 8888
          name: http
      restartPolicy: Always
