resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workbench-service
spec:
  selector:
    app: workbench
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8888
